--- a/footer.html
+++ b/footer.html
@@ -409,7 +409,7 @@
 
           <div class="modal-content-wrap preset-content-wrap">
             <div class="modal-content-inner preset-content-inner">
-              <div class="preset-kwrd-wrap">
+              <div class="preset-kywrd-wrap">
                 <div class="preset-kywrd-list">
                   <li class="preset-kywrd-item">
                     <span class="item-kywrd">베개</span>
@@ -423,7 +423,7 @@
                     <span class="item-kywrd">신한은행</span>
                     <span class="item-date"><em>2022.05.03 17:41</em></span>
                   </li>
-                  <li class="preset-kywrd-item">
+                  <li class="preset-kywrd-item now-on">
                     <span class="item-kywrd">잇섭</span>
                     <span class="item-date"><em>2022.05.01 09:57</em></span>
                   </li>
@@ -434,20 +434,25 @@
                 <ul class="preset-list">
                   <li class="preset-item">
                     <div class="set-btn-wrap">
-                      <p class="set-btn search-btn"><span>검색하기</span></p>
+                      <p class="set-btn search-btn"><span>검색</span><em>설정 가져오기</em></p>
                     </div>
 
-                    <ul class="preset-info-wrap">
+                    <ul class="preset-info-list">
                       <li class="preset-info-item info-preset-word">
                         <div class="info-item-title">검색어</div>
                         <div class="info-item-sub">
                           <div class="info-sub-wrap">
-                            <p class="info-sub-word info-preset-word">잇섭</p>
+                            <p class="info-sub-word preset-word">잇섭</p>
+                            <span class="saved-date">
+                              <em>2022.05.01</em>
+                              <em>09:57</em>
+                              저장됨
+                            </span>
                           </div>
                         </div>
                       </li>
 
-                      <li class="preset-info-item preset-optional-word .preset-include-word">
+                      <li class="preset-info-item preset-optional-word preset-include-word">
                         <div class="info-item-title">포함어</div>
                         <div class="info-item-sub">
                           <div class="info-sub-wrap">
@@ -458,7 +463,7 @@
                         </div>
                       </li>
 
-                      <li class="preset-info-item preset-optional-word .preset-exclude-word">
+                      <li class="preset-info-item preset-optional-word preset-exclude-word">
                         <div class="info-item-title">제외어</div>
                         <div class="info-item-sub">
                           <div class="info-sub-wrap">
@@ -474,13 +479,66 @@
                           <div class="info-sub-wrap info-date-wrap date-start">
                             <p class="date-title">시작일</p>
                             <div class="date-info">
-                              <span>2022-05-10 13:05</span>
-                              <em>저장됨</em>
+                              <span>2022-04-01</span>
+                            </div>
+                          </div>
+                          <div class="info-sub-wrap info-date-wrap date-end">
+                            <p class="date-title">종료일</p>
+                            <div class="date-info">
+                              <span>2022-05-01</span>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+
+                      <li class="preset-info-item info-channel">
+                        <div class="info-item-title">대상 채널</div>
+                        <div class="info-item-sub">
+                          <div class="info-sub-wrap info-channel-wrap info-channel-sns">
+                            <p class="channel-title">SNS</p>
+                            <div class="channel-wrap">
+                              <span class="channel-item">트위터</span>
+                              <span class="channel-item">인스타그램</span>
+                              <span class="channel-item">유튜브</span>
+                              <span class="channel-item">페이스북</span>
                             </div>
                           </div>
 
-                          <div class="info-sub-wrap info-date-wrap date-end">
+                          <div class="info-sub-wrap info-channel-wrap info-channel-cafe">
+                            <p class="channel-title">CAFE</p>
+                            <div class="channel-wrap">
+                              <span class="channel-item">네이버</span>
+                              <span class="channel-item">다음</span>
+                            </div>
+                          </div>
 
+                          <div class="info-sub-wrap info-channel-wrap info-channel-blog">
+                            <p class="channel-title">BLOG</p>
+                            <div class="channel-wrap">
+                              <span class="channel-item">네이버</span>
+                              <span class="channel-item">티스토리</span>
+                              <span class="channel-item">다음</span>
+                            </div>
+                          </div>
+
+                          <div class="info-sub-wrap info-channel-wrap info-channel-commu">
+                            <p class="channel-title">COMMUNITY</p>
+                            <div class="channel-wrap">
+                              <span class="channel-item">뽐뿌</span>
+                              <span class="channel-item">MLB파크</span>
+                              <span class="channel-item">클리앙</span>
+                              <span class="channel-item">FM코리아</span>
+                              <span class="channel-item">DC</span>
+                              <span class="channel-item">루리웹</span>
+                              <span class="channel-item">인벤</span>
+                            </div>
+                          </div>
+
+                          <div class="info-sub-wrap info-channel-wrap info-channel-news">
+                            <p class="channel-title">NEWS</p>
+                            <div class="channel-wrap">
+                              <span class="channel-item">네이버</span>
+                            </div>
                           </div>
                         </div>
                       </li>
