--- a/footer.html
+++ b/footer.html
@@ -435,7 +435,7 @@
                   <li class="preset-item">
                     <div class="set-btn-wrap">
                       <!-- <p class="set-btn search-btn"><span>검색</span><em>설정 가져오기</em></p> -->
-                      <p class="set-btn search-btn"><em>설정 가져오기</em></p>
+                      <p class="set-btn search-btn"><em>키워드 검색하기</em></p>
                     </div>
 
                     <ul class="preset-info-list">
