--- a/footer.html
+++ b/footer.html
@@ -395,6 +395,7 @@
       </div>
     </div>
 
+    <!-- 검색설정 가져오기 모달 START -->
     <div id="srchSetModal" class="modal-section">
       <div class="modalBg"></div>
       <div class="modal-wrap search-preset-modal">
@@ -552,6 +553,7 @@
         </div>
       </div>
     </div>
+    <!-- 검색설정 가져오기 모달 END -->
 
   </div>
 </aside>
