--- a/footer.html
+++ b/footer.html
@@ -83,7 +83,7 @@
             <div class="content-all-wrap">
               <ul class="content-list">
                 <li class="content-item">
-                  <p class="content-channel sns-insta"></p>
+                  <p class="content-channel community-all"></p>
                   <ul class="content-subs-list">
                     <li class="content-subs-item content-name">이렇게 내용물이 많아도 넘치지 않게 동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세
                       무궁화 삼천리 화려강산 대한사람
@@ -99,7 +99,7 @@
                       target="_blank"><img src="./src/img/icon/icon-link.svg" alt=""></a></p>
                 </li>
                 <li class="content-item">
-                  <p class="content-channel sns-insta"></p>
+                  <p class="content-channel news-all"></p>
                   <ul class="content-subs-list">
                     <li class="content-subs-item content-name">동해물과 백두산이 마르고 닳도록</li>
                     <li class="content-subs-item content-date">2022.03.03</li>
