--- a/now.html
+++ b/now.html
@@ -829,7 +829,7 @@
                 </div>
                 <div class="article-rank-wrap">
                   <ul class="rank-list">
-                    <li class="rank-item item-title">
+                    <li class="rank-title item-title">
                       <div class="item-standing sort-select-box">
                         <div class="cont-select-box">
                           <div class="cont-select">
@@ -918,7 +918,7 @@
                 </div>
                 <div class="article-rank-wrap">
                   <ul class="rank-list">
-                    <li class="rank-item item-title">
+                    <li class="rank-title item-title">
                       <p class="item-standing">순위</p>
                       <span class="item-keyword">단어</span>
                       <span class="item-num">건수</span>
