--- a/hottest.html
+++ b/hottest.html
@@ -33,7 +33,7 @@
                   <li class="tab-item tab-now"><a href="./now.html">NOW</a></li>
                   <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
                   <li class="tab-item tab-hottest now-on"><a href="./hottest.html">HOTTEST</a></li>
-                  <li class="tab-item tab-preset"><a href="./userPreset.html">PRESET</a></li>
+                  <!-- <li class="tab-item tab-preset"><a href="./userPreset.html">PRESET</a></li> -->
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now">
