--- a/userPreset.html
+++ b/userPreset.html
@@ -37,7 +37,7 @@
                   <li class="tab-item tab-now"><a href="./now.html">NOW</a></li>
                   <li class="tab-item tab-trend"><a href="./trend.html">TREND</a></li>
                   <li class="tab-item tab-hottest"><a href="./hottest.html">HOTTEST</a></li>
-                  <li class="tab-item tab-preset now-on"><a href="./userPreset.html">PRESET</a></li>
+                  <!-- <li class="tab-item tab-preset now-on"><a href="./userPreset.html">PRESET</a></li> -->
                 </ul>
                 <ul class="tab-info-list">
                   <li class="tab-info-item tab-now">
