--- a/header.html
+++ b/header.html
@@ -1,13 +1,14 @@
 <header>
   <div class="header-inner">
     <h1 class="logo"><a href="index.html"><img src="./src/img/common/logo.svg" alt="buzzOn logo"></a></h1>
-    <div class="mobile-menu-btn">
+    <!-- div class="mobile-menu-btn">
       <a href="./userPreset.html" class="link-area">
         <p class="menu-line line-1"></p>
         <p class="menu-line line-2"></p>
         <p class="menu-line line-3"></p>
       </a>
-    </div>
+    </div -->
+    <p class="go-preset-btn"><a href="./userPreset_sub.html" target="_blank"></a></p>
     <p id="moDetailOpen" class="search-slide-btn"></p>
 
     <div class="search-area">
@@ -43,7 +44,7 @@
     </div>
 
     <div class="user-area">
-      <a href="./userPreset.html" class="link-area">
+      <a href="./userPreset_sub.html" class="link-area">
         <p class="user-profile"></p>
         <span class="user-name">야무진진눈깨비</span>
       </a>
