--- a/userPreset_sub.html
+++ b/userPreset_sub.html
@@ -21,8 +21,8 @@
 
 <body>
   <div id="wrap" class="user-page usePreset-page">
-    <div id="dummy-btn-userpreset_sub" style="position:absolute;top:100px;left:20px;font-size:18px;font-weight:700;"><a
-        href="./userPreset.html">돌아가기</a></div>
+    <!-- div id="dummy-btn-userpreset_sub" style="position:absolute;top:100px;left:20px;font-size:18px;font-weight:700;"><a
+        href="./userPreset.html">돌아가기</a></div -->
     <div id="header" class="contents-page">
 
     </div>
@@ -114,11 +114,26 @@
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
                         <div class="set-btn-wrap">
-                          <p class="set-btn modify-btn"><span>수정</span></p>
-                          <p class="set-btn search-btn"><span>검색</span></p>
-                          <p class="set-btn save-btn"><span>저장</span></p>
-                          <p class="set-btn del-btn"><span>삭제</span></p>
-                          <p class="set-btn cls-btn"><span>취소</span></p>
+                          <p class="set-btn modify-btn">
+                            <span>수정</span>
+                            <em>수정하기</em>
+                          </p>
+                          <p class="set-btn search-btn">
+                            <span>검색</span>
+                            <em>검색하기</em>
+                          </p>
+                          <p class="set-btn save-btn">
+                            <span>저장</span>
+                            <em>저장하기</em>
+                          </p>
+                          <p class="set-btn del-btn">
+                            <span>삭제</span>
+                            <em>삭제하기</em>
+                          </p>
+                          <p class="set-btn cls-btn">
+                            <span>취소</span>
+                            <em>취소하기</em>
+                          </p>
                         </div>
                         <ul class="set-info-wrap">
                           <li class="set-info-item info-search-word">
