--- a/userPreset_sub.html
+++ b/userPreset_sub.html
@@ -113,6 +113,7 @@
                         <!-- 수정 btn으로 .usr-set-item에 .now-on 토글 >> 내용 수정 모드 -->
                         <!-- 이하 input들 수정모드 >> readnoly = false; -->
                         <!-- but! input checkbox는 onclick="return false"로 대체 -->
+                        <div class="usr-set-item-cls"></div>
                         <div class="set-btn-wrap">
                           <p class="set-btn modify-btn">
                             <span>수정</span>
