--- a/index_login.html
+++ b/index_login.html
@@ -34,7 +34,7 @@
             <div class="intro-search">
               <input type="text" id="introSearch" placeholder="검색어를 입력하세요">
               <!-- <label for="introSearch">검색어를 입력하세요</label> -->
-              <p class="search-btn"></p>
+              <p class="search-btn"><a href="./now.html"></a></p>
             </div>
 
             <!-- 로그인 후 addClass .now-on으로 활성화 -->
